# bact-bessyii-mls-ophyd

./: .gitignore  pyproject.toml
bact_bessyii_mls_ophyd/db/: mongo_repository.py
bact_bessyii_mls_ophyd/devices/process/: bpm_packed_data.py  counter_sink.py
bact_bessyii_mls_ophyd/devices/utils/: derived_signal.py  derived_signal_bpm.py  power_converter.py  power_converters_as_multiplexer.py
examples/: bba_plots.ipynb  bpm.py
