[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bact-bessyii-mls-ophyd"
version = "0.0.1"
description = "Ophyd Devices Common for Bessy II and Metrology Light Source."
authors = [ "Pierre Schnizer", "Waheedullah Sulaiman Khail"]
license = "GPL-3.0"
homepage = "https://github.com/hz-b/bact-bessyii-mls-ophyd"
documentation = "https://github.com/hz-b/bact-bessyii-mls-ophyd.git"
repository = "https://github.com/hz-b/bact-bessyii-mls-ophyd.git"
keywords = []

[tool.poetry.dependencies]
python = ">=3.7"
ophyd  = ">=1.5"
